# RT

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  cube.json  main.c  norme  scene1.json  sphere.json  writing.json
cmake_modules/: FindSDL2.cmake
gui_textures/kineticplasma-fonts_passageway/: FONTLOG_NOTICE.txt
includes/: env.h  gui.h  kernel.h  keys.h  parser.h  rt.h  rt_textures.h  rt_types.h  server_client.h
libJSON/: Makefile  cube.json  test.c
lib_json/: Makefile
libft/: Makefile
libft/src/: ft_atoi_base.c  ft_itoa.c  ft_itoa_base.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memmove.c  ft_putnbr.c  ft_putnbr_fd.c  ft_sort_int_tab.c  ft_sort_str_tab.c  ft_strcat.c  ft_strcmp.c  ft_strequ.c  ft_strlcat.c  ft_strnew.c  ft_strrchr.c  ft_strsplit.c  ft_strtrim.c  get_next_line.c
libvec/: Makefile
libvec/includes/: libvec.h
libvec/src/: clvec_add.c  clvec_rot_x.c  clvec_rot_y.c  clvec_rot_z.c  clvec_sub.c  vec_magn.c  vec_print.c
scene/: abstract.json  colors.json  cornell_box.json  dusty.json  for_torus.json  general_texture_test.json  mirror.json  mushroom.json  nice_torus.json  pyramida.json  recursion.json  reflection.json  refraction.json  refractions.json  scene1.json  scene2.json  scene3.json  soft_shadow.json  texture_test_plane.json  writing.json  wrong_one.json
src/: build_stuff.c  cl_exec.c  cl_init_utils.c  cl_initialization.c  client_main.c  client_read_data.c  fill_each_obj.c  handle_events.c  init_cam.c  intersections_and_normals.cl  kernel.h  kernel_source.cl  keyboard_events.c  main.c  main_loop.c  message.c  movement_events.c  parse.c  read_file.c  rot_obj.c  scene_init.c  scene_utils.c  sdl_utils.c  server_main.c  window_event.c  write_png.c  write_ppm.c
src/cl_files/: intersections_and_normals.cl  kernel_source.cl  material.cl  texture_mapping.cl
src/events/: keyboard_events.c  mouse_event.c  movement_events.c  mv_obj.c  mv_obj2.c  rot_obj.c  rot_obj2.c  rotate.c  window_event.c  write_png.c  write_ppm.c
src/gui/: button.c  button1.c  common_staff.c  controller.c  controller1.c  gui.c  gui1.c  label.c  label1.c  menu.c  menu1.c  menu2.c  menu3.c  menu4.c  radio.c  radio1.c
src/parser/: check_params1.c  check_params2.c  default_objs.c  default_objs2.c  fill_each_obj.c  fill_each_obj2.c  fill_each_obj3.c  fill_each_obj4.c  fill_each_obj5.c  ftoa.c  init_cam.c  init_cam2.c  parse.c  scene_init.c  scene_init2.c  scene_init3.c  scene_init4.c  write_to_file.c  write_to_file2.c  write_to_file3.c  write_to_file4.c  write_to_file5.c
src/server-client/: run_server.c  socket_utils.c  thread_pool.c  tpool_cleanup.c  tpool_client.c  tpool_client_logic.c  tpool_new_msg.c  tpool_read_send_msg.c  tpool_threads.c
src/textures/: compress_texture.c  load_texture.c
